---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/set_role.sql
---
SOURCE_FILE
  COMMENT "-- docs"
  WHITESPACE "\n"
  SET_ROLE
    SET_KW "SET"
    WHITESPACE " "
    ROLE_KW "ROLE"
    WHITESPACE " "
    LITERAL
      STRING "'paul'"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  SET_ROLE
    SET_KW "SET"
    WHITESPACE " "
    ROLE_KW "ROLE"
    WHITESPACE " "
    SET_ROLE_NONE
      NONE_KW "NONE"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  SET_ROLE
    SET_KW "SET"
    WHITESPACE " "
    LOCAL_SCOPE
      LOCAL_KW "LOCAL"
    WHITESPACE " "
    ROLE_KW "ROLE"
    WHITESPACE " "
    SET_ROLE_NONE
      NONE_KW "NONE"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  SET_ROLE
    SET_KW "SET"
    WHITESPACE " "
    SESSION_SCOPE
      SESSION_KW "SESSION"
    WHITESPACE " "
    ROLE_KW "ROLE"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "foo"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  SET_ROLE
    SET_KW "set"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    LITERAL
      STRING "'fooo'"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  SET_ROLE
    SET_KW "set"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    LITERAL
      STRING "'api'"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  RESET_ROLE
    RESET_KW "RESET"
    WHITESPACE " "
    ROLE_KW "ROLE"
    SEMICOLON ";"
  WHITESPACE "\n\n"
